- fixed a bug with the register.html templates - removed logout button from admin page, in favor of nav hyperlink - right-aligned the nav bar

--- a/src/main/resources/static/styles.css
+++ b/src/main/resources/static/styles.css
@@ -12,7 +12,7 @@ h1 {
 }
 
 nav {
-
+    text-align: right;
 }
 
 ul {
